# rust-rtb-bidder

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  config.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
bidder-bench/: Cargo.toml
bidder-bench/benches/: pipeline.rs
bidder-bench/src/: lib.rs
bidder-core/: Cargo.toml
bidder-core/src/: clock.rs  error.rs  events.rs  health.rs  hedge.rs  hedge_feedback.rs  kafka_incident.rs  lib.rs  notice.rs
bidder-core/src/breaker/: mod.rs
bidder-core/src/cache/: mod.rs
bidder-core/src/catalog/: campaign_catalog.rs  loader.rs  mod.rs  types.rs
bidder-core/src/config/: mod.rs
bidder-core/src/exchange/: google_adx.rs  mod.rs  openrtb_generic.rs
bidder-core/src/frequency/: impression_recorder.rs  in_process.rs  mod.rs
bidder-core/src/metrics/: mod.rs
bidder-core/src/model/: candidate.rs  context.rs  mod.rs  openrtb.rs
bidder-core/src/pacing/: local.rs  mod.rs
bidder-core/src/pipeline/: mod.rs  stage.rs
bidder-core/src/pipeline/stages/: budget_pacing.rs  candidate_limit.rs  candidate_retrieval.rs  freq_cap.rs  mod.rs  ranking.rs  request_validation.rs  response_build.rs  scoring.rs  user_enrichment.rs
bidder-core/src/repository/: mod.rs
bidder-core/src/scoring/: ab_test.rs  cascade.rs  feature_weighted.rs  features.rs  ml.rs  mod.rs
bidder-core/src/targeting/: mod.rs
bidder-core/src/telemetry/: mod.rs
bidder-core/tests/: ml_scorer_integration.rs  pipeline_integration.rs
bidder-protos/: Cargo.toml  build.rs
bidder-protos/proto/: adx.proto  events.proto
bidder-protos/src/: lib.rs
bidder-server/: Cargo.toml
bidder-server/src/: freq_cap.rs  kafka.rs  main.rs  segment_repo.rs  win_notice.rs
bidder-server/src/server/: handlers.rs  mod.rs  routes.rs  socket.rs  state.rs  warmup.rs
bidder-server/src/server/layers/: metrics.rs
docker/: seed-postgres.py  seed-redis.py
docker/grafana/dashboards/: bidder.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/otel-collector/: config.yaml
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EXTERNAL-SERVICES.md  IN-PROCESS-FREQUENCY-CACHE.md  LOAD-TEST-RESULTS-rust-v0-baseline.md  PLAN.md  POSTGRES-SCHEMA.md  REDIS-KEYS.md  SCORING-FEATURES.md  SEGMENT-IDS.md  USAGE.md
docs/development-phases/: phase-4-hot-path.md  phase-6-ml-scoring.md  phase-6.5-dev-load-test-log.md  phase-7-production-hardening.md
docs/notes/: phase-1-foundation.md  phase-2-pipeline.md  phase-3-data-layer.md  phase-4-hot-path.md  phase-5-resilience-events.md  phase-6-ml-scoring.md  phase-6.5-dev-load-test-log.md  phase-6.5-load-test-baseline.md  phase-8-architectural-followups.md
k6/: README.md  golden.js
migrations/: 0001_initial.sql  0002_freq_cap_limits.sql
tests/fixtures/: README.md  golden-bid-request-no-user.json  golden-bid-request.json  scoring_parity.jsonl  test_pctr_model.onnx
tools/: analyze-baseline.sh  inspect-stages.sh  install-onnxruntime.sh  setup-ort-env.sh
tools/gen-test-model/: Cargo.toml  build.rs
tools/gen-test-model/proto/: onnx_minimal.proto
tools/gen-test-model/src/: main.rs  parity.rs
