[workspace]
members = [
    "bidder-core",
    "bidder-server",
    "bidder-bench",
    "bidder-protos",
    "tools/gen-test-model",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
# async runtime
tokio = { version = "1.52", features = ["full"] }

# http
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.9", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "request-id", "util"] }

# config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# telemetry — tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry-semantic-conventions = "0.31"

# telemetry — metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

# allocator
tikv-jemallocator = "0.6"

# reqwest 0.12 — required by opentelemetry-otlp 0.31's reqwest-client feature (^0.12 pin).
# reqwest 0.13 is the latest stable; upgrade this line when OTel ecosystem catches up.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# futures utilities
futures-util = "0.3"

# OpenRTB parse buffer + zero-copy redis key buffers
bytes = "1.11"

# simd-json for OpenRTB request parsing (mutates &mut [u8] in place; never Bytes)
simd-json = { version = "0.17", features = ["serde_impl"] }

# UUID for bid IDs
uuid = { version = "1.23", features = ["v4", "fast-rng"] }

# data layer
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
fred = { version = "10.1", features = ["i-keys", "i-hashes", "i-sets", "i-scripts", "dynamic-pool", "metrics"] }
moka = { version = "0.12.15", features = ["future"] }
arc-swap = "1.9.1"
roaring = "0.11.4"
num_cpus = "1.17"
rkyv = { version = "0.8", features = ["std"] }

# cli
clap = { version = "4.6", features = ["derive", "env"] }

# async trait support
async-trait = "0.1"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# socket
socket2 = { version = "0.6", features = ["all"] }

# benchmarking
criterion = { version = "0.8", features = ["async_tokio"] }

# protobuf codegen + runtime
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3.0"

# kafka
rdkafka = { version = "0.37", features = ["cmake-build", "tokio"] }

# crypto / encoding (HMAC for win-notice authentication)
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
hex = "0.4"

# ML inference (Phase 6)
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.16"
notify = "8.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.bench]
inherits = "release"
strip = "none"
