[package]
name = "bidder-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
bytes.workspace = true
uuid.workspace = true
sqlx.workspace = true
moka.workspace = true
arc-swap.workspace = true
roaring.workspace = true
async-trait.workspace = true
prost.workspace = true
bidder-protos = { path = "../bidder-protos" }

[features]
default = []
linux-tuning = []
monoio-runtime = []
allocator-arena = []
test-helpers = []

[[test]]
name = "pipeline_integration"
required-features = ["test-helpers"]
