[package]
name = "bidder-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
bytes.workspace = true
uuid.workspace = true
sqlx.workspace = true
moka.workspace = true
arc-swap.workspace = true
roaring.workspace = true
async-trait.workspace = true
prost.workspace = true
ort.workspace = true
ndarray.workspace = true
notify.workspace = true
bidder-protos = { path = "../bidder-protos" }

[dev-dependencies]
libc.workspace = true

[features]
default = []
linux-tuning = []
monoio-runtime = []
allocator-arena = []
test-helpers = []
# Opt-in feature for tests that load ONNX Runtime. ort 2.0.0-rc.10's macOS
# teardown raises SIGABRT after assertions pass — benign but cargo treats it as
# a test failure. Run on Linux CI; on macOS dev, run with `cargo test --features
# ml-runtime` explicitly when validating the ML path.
ml-runtime = []

[[test]]
name = "pipeline_integration"
required-features = ["test-helpers"]

[[test]]
name = "ml_scorer_integration"
required-features = ["ml-runtime"]
# Custom harness: we own main() so we can flush stdio and call libc::_exit(0)
# on macOS BEFORE ort's C++ static destructors race with libdispatch. Linux
# uses the normal std::process::exit path. See the file's module doc for the
# rationale and `docs/notes/phase-6-ml-scoring.md` § "macOS teardown" for the
# class of bug being worked around.
harness = false
